--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
       <h1>Dino & Fossil Discovery</h1>
       <div>
-        <a href="login.html">Login</a> |
-        <a href="signup.html">Sign Up</a>
+        <a href="login.html">Login</a>
       </div>
     </nav>
   </header>
