--- a/login.html
+++ b/login.html
@@ -3,23 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Dino Portal</title>
+  <title>Dino & Fossil Discovery</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
-  <main class="auth">
-    <form action="index.html" method="get">
-      <h1>Welcome Back</h1>
-      <input type="text" placeholder="First Name" required>
-      <input type="text" placeholder="Last Name" required>
-      <input type="email" placeholder="Email" required>
-      <div class="gender">
-        <label><input type="radio" name="gender"> Male</label>
-        <label><input type="radio" name="gender"> Female</label>
-        <label><input type="radio" name="gender"> Other</label>
+  <audio autoplay loop>
+    <source src="assets/audio/nature.mp3" type="audio/mpeg">
+  </audio>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="index.html">Logout</a>
       </div>
-      <button type="submit">Login</button>
-    </form>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Explore the Eras of Giants</h2>
+      <div class="grid">
+        <a href="landdino.html">Land Dinosaurs</a>
+        <a href="flyingdino.html">Flying Reptiles</a>
+        <a href="waterdino.html">Water Reptiles</a>
+        <a href="airdino.html">Avian Dinosaurs</a>
+        <a href="fossils.html">Fossil Fuels</a>
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal | Nature vibes only 🌿</p>
+  </footer>
 </body>
 </html>
