modified text in login

--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>Created by Khushagra Rawal | Nature vibes only 🌿</p>
+    <p>Khushagra Rawal</p>
   </footer>
 </body>
 </html>
