Added Audio Tag To All Of The Html Files

--- a/Dimorphodon.html
+++ b/Dimorphodon.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="assets/audio/nature.mp3" type="audio/mpeg">
+  </audio>
   <header><h1>Dimorphodon 🦴</h1></header>
   <main>
     <img src="assets/images/dimorphodon.jpg" alt="Dimorphodon" width="300">
