--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
+  <audio autoplay loop>
+    <source src="assets/audio/nature.mp3" type="audio/mpeg">
+  </audio>
 
   <header>
     <nav>
