--- a/naturalgas.html
+++ b/naturalgas.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="assets/audio/nature.mp3" type="audio/mpeg">
+  </audio>
   <header><h1>Natural Gas 🔥</h1></header>
   <main>
     <img src="assets/images/naturalgas.jpg" alt="Natural Gas" width="300">
