changed appearence and images

--- a/Brachiosaurus.html
+++ b/Brachiosaurus.html
@@ -14,7 +14,7 @@
     <h1>Brachiosaurus 🦒</h1>
   </header>
   <main>
-    <img src="assets/images/brachiosaurus.jpg" alt="Brachiosaurus" width="300">
+    <img src="assets/images/Brachiosaurus.png">
     <p>
       Brachiosaurus was a massive, long-necked herbivore that could reach vegetation high up in trees.
       It lived around 150 million years ago during the Jurassic period.
