--- a/Confuciusornis.html
+++ b/Confuciusornis.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Confuciusornis 🪶</h1></header>
   <main>
-    <img src="assets/images/confuciusornis.jpg" alt="Confuciusornis" width="300">
+    <img src="assets/images/Confuciusornis.png">
     <p>
       Confuciusornis was one of the earliest birds with a beak instead of teeth.
       It lived during the Early Cretaceous in what is now China, and fossils show long tail feathers in males.
