--- a/Dimorphodon.html
+++ b/Dimorphodon.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Dimorphodon 🦴</h1></header>
   <main>
-    <img src="assets/images/dimorphodon.jpg" alt="Dimorphodon" width="300">
+    <img src="assets/images/Dimorphodon.png">
     <p>
       Dimorphodon was an early Jurassic pterosaur with a short wingspan and a large head.
       Its name means “two-formed tooth,” referring to the two types of teeth in its jaws.
