--- a/Hesperornis.html
+++ b/Hesperornis.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Hesperornis 🐧</h1></header>
   <main>
-    <img src="assets/images/hesperornis.jpg" alt="Hesperornis" width="300">
+    <img src="assets/images/Hesperornis.png">
     <p>
       Hesperornis was a flightless seabird from the Late Cretaceous that used its strong legs to swim underwater.
       It had teeth in its beak — a rare feature among birds.
