--- a/Ichthyornis.html
+++ b/Ichthyornis.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Ichthyornis 🕊️</h1></header>
   <main>
-    <img src="assets/images/ichthyornis.jpg" alt="Ichthyornis" width="300">
+    <img src="assets/images/Ichthyornis.png">
     <p>
       Ichthyornis was a seabird from the Late Cretaceous period with both teeth and wings.
       It could fly powerfully and was one of the last birds to retain dinosaur-like features.
