--- a/Kronosaurus.html
+++ b/Kronosaurus.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Kronosaurus 🐋</h1></header>
   <main>
-    <img src="assets/images/kronosaurus.jpg" alt="Kronosaurus" width="300">
+    <img src="assets/images/Kronosaurus.png">
     <p>
       Kronosaurus was one of the largest pliosaurs, reaching lengths of over 30 feet.
       It was a powerful predator with large flippers and strong jaws filled with conical teeth.
