--- a/Mosasaurus.html
+++ b/Mosasaurus.html
@@ -14,7 +14,7 @@
     <h1>Mosasaurus 🐋</h1>
   </header>
   <main>
-    <img src="assets/images/mosasaurus.jpg" alt="Mosasaurus" width="300">
+    <img src="assets/images/Mosasaurus.png">
     <p>
       Mosasaurus was a large, aquatic reptile that dominated the seas during the late Cretaceous.
       It could grow up to 50 feet long and had a double-hinged jaw perfect for catching prey.
