--- a/Pteranodon.html
+++ b/Pteranodon.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Pteranodon 🪽</h1></header>
   <main>
-    <img src="assets/images/pteranodon.jpg" alt="Pteranodon" width="300">
+    <img src="assets/images/Pteranodon.png">
     <p>
       Pteranodon was a large pterosaur with a wingspan over 6 meters. 
       It had a long, toothless beak and a distinctive crest on its head.
