--- a/Pterodactylus.html
+++ b/Pterodactylus.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Pterodactylus 🦋</h1></header>
   <main>
-    <img src="assets/images/pterodactylus.jpg" alt="Pterodactylus" width="300">
+    <img src="assets/images/Pterodactylus.png">
     <p>
       Pterodactylus was one of the first pterosaurs discovered.
       It had long wings and a narrow beak filled with small teeth, adapted for catching insects and fish.
