--- a/Quetzalcoatlus.html
+++ b/Quetzalcoatlus.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Quetzalcoatlus 🦅</h1></header>
   <main>
-    <img src="assets/images/quetzalcoatlus.jpg" alt="Quetzalcoatlus" width="300">
+    <img src="assets/images/Quetzalcoatlus.png">
     <p>
       Quetzalcoatlus was one of the largest known flying animals of all time, 
       with an estimated wingspan of 10–11 meters. 
