--- a/Rhamphorhynchus.html
+++ b/Rhamphorhynchus.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Rhamphorhynchus 🪽</h1></header>
   <main>
-    <img src="assets/images/rhamphorhynchus.jpg" alt="Rhamphorhynchus" width="300">
+    <img src="assets/images/Rhamphorhynchus.png">
     <p>
       Rhamphorhynchus was a Jurassic flying reptile with a long tail ending in a diamond-shaped vane.
       It had sharp teeth adapted for catching fish and lived near ancient lagoons.
