--- a/Sapeornis.html
+++ b/Sapeornis.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Sapeornis 🪶</h1></header>
   <main>
-    <img src="assets/images/sapeornis.jpg" alt="Sapeornis" width="300">
+    <img src="assets/images/Sapeornis.png">
     <p>
       Sapeornis was an early bird from the Cretaceous period known for its long wings and short tail.
       It could glide and probably flew short distances while foraging for food.
