--- a/Triceratops.html
+++ b/Triceratops.html
@@ -14,7 +14,7 @@
     <h1>Triceratops 🦕</h1>
   </header>
   <main>
-    <img src="assets/images/triceratops.jpg" alt="Triceratops" width="300">
+    <img src="assets/images/Triceratops.png">
     <p>
       Triceratops was a large herbivorous dinosaur from the late Cretaceous period. 
       It had three distinct facial horns and a large bony frill that protected its neck.
