--- a/Velociraptor.html
+++ b/Velociraptor.html
@@ -14,7 +14,7 @@
     <h1>Velociraptor 🦖</h1>
   </header>
   <main>
-    <img src="assets/images/velociraptor.jpg" alt="Velociraptor" width="300">
+    <img src="assets/images/Velociraptor.png">
     <p>
       The Velociraptor was a small but deadly predator, known for its intelligence and speed.
       Fossils suggest it had feathers, linking it closely to modern birds.
