--- a/airdino.html
+++ b/airdino.html
@@ -5,20 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avian Dinosaurs</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
-  <header><h1>Avian Dinosaurs 🐦</h1></header>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="login.html">Home</a>
+      </div>
+    </nav>
+  </header>
+
   <main>
-    <ul>
-      <li><a href="Archaeopteryx.html">Archaeopteryx</a></li>
-      <li><a href="Confuciusornis.html">Confuciusornis</a></li>
-      <li><a href="Ichthyornis.html">Ichthyornis</a></li>
-      <li><a href="Hesperornis.html">Hesperornis</a></li>
-      <li><a href="Sapeornis.html">Sapeornis</a></li>
-    </ul>
+    <section>
+      <h2>Avian Dinosaurs</h2>
+      <div class="card-container">
+
+        <div class="card">
+          <img src="assets/images/Archaeopteryx.png" alt="Archaeopteryx">
+          <div class="card-content">
+            <h3>Archaeopteryx</h3>
+            <a href="Archaeopteryx.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Confuciusornis.png" alt="Confuciusornis">
+          <div class="card-content">
+            <h3>Confuciusornis</h3>
+            <a href="Confuciusornis.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Ichthyornis.png" alt="Ichthyornis">
+          <div class="card-content">
+            <h3>Ichthyornis</h3>
+            <a href="Ichthyornis.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Hesperornis.png" alt="Hesperornis">
+          <div class="card-content">
+            <h3>Hesperornis</h3>
+            <a href="Hesperornis.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Sapeornis.png" alt="Sapeornis">
+          <div class="card-content">
+            <h3>Sapeornis</h3>
+            <a href="Sapeornis.html">Explore</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal</p>
+  </footer>
 </body>
 </html>
