--- a/coal.html
+++ b/coal.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Coal ⛏️</h1></header>
   <main>
-    <img src="assets/images/coal.jpg" alt="Coal" width="300">
+    <img src="assets/images/Coal.png">
     <p>
       Coal is a fossil fuel formed from ancient plant matter buried and compressed over millions of years.
       It’s used for power generation and steel production, though it contributes heavily to pollution.
