--- a/flyingdino.html
+++ b/flyingdino.html
@@ -5,20 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flying Reptiles</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
-  <header><h1>Flying Reptiles 🪽</h1></header>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="login.html">Home</a>
+      </div>
+    </nav>
+  </header>
+
   <main>
-    <ul>
-      <li><a href="Pteranodon.html">Pteranodon</a></li>
-      <li><a href="Quetzalcoatlus.html">Quetzalcoatlus</a></li>
-      <li><a href="Rhamphorhynchus.html">Rhamphorhynchus</a></li>
-      <li><a href="Dimorphodon.html">Dimorphodon</a></li>
-      <li><a href="Pterodactylus.html">Pterodactylus</a></li>
-    </ul>
+    <section>
+      <h2>Flying Reptiles</h2>
+      <div class="card-container">
+
+        <div class="card">
+          <img src="assets/images/Pteranodon.png" alt="Pteranodon">
+          <div class="card-content">
+            <h3>Pteranodon</h3>
+            <a href="Pteranodon.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Quetzalcoatlus.png" alt="Quetzalcoatlus">
+          <div class="card-content">
+            <h3>Quetzalcoatlus</h3>
+            <a href="Quetzalcoatlus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Rhamphorhynchus.png" alt="Rhamphorhynchus">
+          <div class="card-content">
+            <h3>Rhamphorhynchus</h3>
+            <a href="Rhamphorhynchus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Dimorphodon.png" alt="Dimorphodon">
+          <div class="card-content">
+            <h3>Dimorphodon</h3>
+            <a href="Dimorphodon.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Pteranodon.png" alt="Pterodactylus">
+          <div class="card-content">
+            <h3>Pterodactylus</h3>
+            <a href="Pterodactylus.html">Explore</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal</p>
+  </footer>
 </body>
 </html>
