--- a/landdino.html
+++ b/landdino.html
@@ -5,20 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Land Dinosaurs</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
-  <header><h1>Land Dinosaurs 🦖</h1></header>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="login.html">Home</a>
+      </div>
+    </nav>
+  </header>
+
   <main>
-    <ul>
-      <li><a href="Tyrannosaurus_rex.html">Tyrannosaurus Rex</a></li>
-      <li><a href="Triceratops.html">Triceratops</a></li>
-      <li><a href="Stegosaurus.html">Stegosaurus</a></li>
-      <li><a href="Brachiosaurus.html">Brachiosaurus</a></li>
-      <li><a href="Velociraptor.html">Velociraptor</a></li>
-    </ul>
+    <section>
+      <h2>Land Dinosaurs</h2>
+      <div class="card-container">
+
+        <div class="card">
+          <img src="assets/images/trex.png" alt="Tyrannosaurus Rex">
+          <div class="card-content">
+            <h3>Tyrannosaurus Rex</h3>
+            <a href="Tyrannosaurus_rex.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Triceratops.png" alt="Triceratops">
+          <div class="card-content">
+            <h3>Triceratops</h3>
+            <a href="Triceratops.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Stegosaurus.png" alt="Stegosaurus">
+          <div class="card-content">
+            <h3>Stegosaurus</h3>
+            <a href="Stegosaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Brachiosaurus.png" alt="Brachiosaurus">
+          <div class="card-content">
+            <h3>Brachiosaurus</h3>
+            <a href="Brachiosaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Velociraptor.png" alt="Velociraptor">
+          <div class="card-content">
+            <h3>Velociraptor</h3>
+            <a href="Velociraptor.html">Explore</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal</p>
+  </footer>
 </body>
 </html>
