--- a/waterdino.html
+++ b/waterdino.html
@@ -5,20 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Water Reptiles</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
-  <header><h1>Water Reptiles 🌊</h1></header>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="login.html">Home</a>
+      </div>
+    </nav>
+  </header>
+
   <main>
-    <ul>
-      <li><a href="Mosasaurus.html">Mosasaurus</a></li>
-      <li><a href="Plesiosaurus.html">Plesiosaurus</a></li>
-      <li><a href="Ichthyosaurus.html">Ichthyosaurus</a></li>
-      <li><a href="Kronosaurus.html">Kronosaurus</a></li>
-      <li><a href="Liopleurodon.html">Liopleurodon</a></li>
-    </ul>
+    <section>
+      <h2>Water Reptiles</h2>
+      <div class="card-container">
+
+        <div class="card">
+          <img src="assets/images/Mosasaurus.png" alt="Mosasaurus">
+          <div class="card-content">
+            <h3>Mosasaurus</h3>
+            <a href="Mosasaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Plesiosaurus.png" alt="Plesiosaurus">
+          <div class="card-content">
+            <h3>Plesiosaurus</h3>
+            <a href="Plesiosaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Ichthyornis.png" alt="Ichthyosaurus">
+          <div class="card-content">
+            <h3>Ichthyosaurus</h3>
+            <a href="Ichthyosaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Kronosaurus.png" alt="Kronosaurus">
+          <div class="card-content">
+            <h3>Kronosaurus</h3>
+            <a href="Kronosaurus.html">Explore</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Liopleurodon.png" alt="Liopleurodon">
+          <div class="card-content">
+            <h3>Liopleurodon</h3>
+            <a href="Liopleurodon.html">Explore</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal</p>
+  </footer>
 </body>
 </html>
