--- a/Archaeopteryx.html
+++ b/Archaeopteryx.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Archaeopteryx 🐦</h1></header>
   <main>
-    <img src="assets/images/archaeopteryx.jpg" alt="Archaeopteryx" width="300">
+    <img src="assets/images/Archaeopteryx.png">
     <p>
       Archaeopteryx is considered the first known bird, showing a mix of dinosaur and bird traits.
       It had feathers, wings, and a long bony tail, representing the transition between the two groups.
