--- a/Ichthyosaurus.html
+++ b/Ichthyosaurus.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Ichthyosaurus 🐬</h1></header>
   <main>
-    <img src="assets/images/ichthyosaurus.jpg" alt="Ichthyosaurus" width="300">
+    <img src="assets/images/Ichthyosaurus.png">
     <p>
       Ichthyosaurus was a dolphin-like marine reptile that lived during the early Jurassic period.
       It had large eyes and a streamlined body, allowing it to move swiftly through the water.
