--- a/Liopleurodon.html
+++ b/Liopleurodon.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Liopleurodon 🐊</h1></header>
   <main>
-    <img src="assets/images/liopleurodon.jpg" alt="Liopleurodon" width="300">
+    <img src="assets/images/Liopleurodon.png">
     <p>
       Liopleurodon was a massive marine predator with a huge jaw span and sharp teeth. 
       It lived during the Middle Jurassic and was known for its agility in the seas.
