--- a/Plesiosaurus.html
+++ b/Plesiosaurus.html
@@ -14,7 +14,7 @@
     <h1>Plesiosaurus 🐢</h1>
   </header>
   <main>
-    <img src="assets/images/plesiosaurus.jpg" alt="Plesiosaurus" width="300">
+    <img src="assets/images/Plesiosaurus.png">
     <p>
       Plesiosaurus had a long neck, small head, and wide body with four large flippers.
       It lived in the early Jurassic seas and likely fed on small fish and squid.
