--- a/Stegosaurus.html
+++ b/Stegosaurus.html
@@ -14,7 +14,7 @@
     <h1>Stegosaurus 🦕</h1>
   </header>
   <main>
-    <img src="assets/images/stegosaurus.jpg" alt="Stegosaurus" width="300">
+    <img src="assets/images/Stegosaurus.png">
     <p>
       Stegosaurus is known for the large, bony plates along its back and the spiked tail called a thagomizer.
       It lived during the Late Jurassic period and was a slow-moving, plant-eating dinosaur.
