--- a/Tyrannosaurus_rex.html
+++ b/Tyrannosaurus_rex.html
@@ -14,7 +14,7 @@
     <h1>Tyrannosaurus Rex 🦖</h1>
   </header>
   <main>
-    <img src="assets/images/trex.jpg" alt="Tyrannosaurus Rex" width="300">
+    <img src="assets/images/trex.png">
     <p>
       Tyrannosaurus Rex, often called T. rex, was one of the largest land carnivores of all time.
       It lived during the late Cretaceous period, about 68–66 million years ago. 
