--- a/fossils.html
+++ b/fossils.html
@@ -5,20 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fossil Fuels</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
   <audio autoplay loop>
     <source src="assets/audio/nature.mp3" type="audio/mpeg">
   </audio>
-  <header><h1>Fossil Fuels ⛏️</h1></header>
+
+  <header>
+    <nav>
+      <h1>Dino & Fossil Discovery</h1>
+      <div>
+        <a href="login.html">Home</a>
+      </div>
+    </nav>
+  </header>
+
   <main>
     <section>
-      <ul>
-        <li><a href="coal.html">Coal</a></li>
-        <li><a href="petroleum.html">Petroleum (Crude Oil)</a></li>
-        <li><a href="naturalgas.html">Natural Gas</a></li>
-      </ul>
+      <h2>Fossil Fuels</h2>
+      <p style="text-align:center; color:#d1c59b; margin-top:10px;">
+        The remains of ancient plants and animals — compressed and transformed over millions of years — now power our modern world.
+      </p>
+
+      <div class="card-container">
+
+        <div class="card">
+          <img src="assets/images/Coal.png" alt="Coal">
+          <div class="card-content">
+            <h3>Coal</h3>
+            <p>A sedimentary rock formed from decayed plants, used as a solid fossil fuel for electricity and steel production.</p>
+            <a href="coal.html">Learn More</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/petroleum.jpg" alt="Petroleum">
+          <div class="card-content">
+            <h3>Petroleum (Crude Oil)</h3>
+            <p>A liquid fossil fuel formed from marine organisms — refined into gasoline, diesel, and plastics.</p>
+            <a href="petroleum.html">Learn More</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/Natural Gas.png" alt="Natural Gas">
+          <div class="card-content">
+            <h3>Natural Gas</h3>
+            <p>Composed mainly of methane, it’s a clean-burning fuel formed from buried organic material.</p>
+            <a href="naturalgas.html">Learn More</a>
+          </div>
+        </div>
+
+      </div>
     </section>
+    <a href="login.html">⬅ Back to Main Page</a>
   </main>
+
+  <footer>
+    <p>Created by Khushagra Rawal</p>
+  </footer>
 </body>
 </html>
