--- a/naturalgas.html
+++ b/naturalgas.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Natural Gas 🔥</h1></header>
   <main>
-    <img src="assets/images/naturalgas.jpg" alt="Natural Gas" width="300">
+    <img src="assets/images/Natural Gas.png" alt="Natural Gas" width="300">
     <p>
       Natural gas is a clean-burning fossil fuel composed mostly of methane.
       It’s used for heating, cooking, and electricity generation — and produces fewer emissions than coal or oil.
