--- a/petroleum.html
+++ b/petroleum.html
@@ -12,7 +12,7 @@
   </audio>
   <header><h1>Petroleum (Crude Oil) 🛢️</h1></header>
   <main>
-    <img src="assets/images/petroleum.jpg" alt="Petroleum" width="300">
+    <img src="assets/images/petroleum.jpg">
     <p>
       Petroleum is a liquid fossil fuel found deep underground, formed from marine organisms.
       It is refined into products like gasoline, diesel, and jet fuel — vital for modern industry.
